Fixed the test-align issue with HtmlToImage.

--- a/src/css/Schedule.css
+++ b/src/css/Schedule.css
@@ -41,15 +41,17 @@
 }
 
 .timelineDate {
-    grid-column: 1;
-    margin: auto;
     text-align: center;
+    grid-column: 1;
+    width: 100%;
+    margin: auto;
     color: #ffa500;
     font-family: Roboto;
     font-weight: 500;
     font-size: 1em;
     padding-top: 0.2em;
     padding-bottom: 0.2em;
+
 }
 
 .timeline {
@@ -63,90 +65,105 @@
 .time1 {
     grid-column: 1;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time2 {
     grid-column: 2;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time3 {
     grid-column: 3;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time4 {
     grid-column: 4;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time5 {
     grid-column: 5;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time6 {
     grid-column: 6;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time7 {
     grid-column: 7;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time8 {
     grid-column: 8;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time9 {
     grid-column: 9;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time10 {
     grid-column: 10;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time11 {
     grid-column: 11;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time12 {
     grid-column: 12;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time13 {
     grid-column: 13;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time14 {
     grid-column: 14;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
 .time15 {
     grid-column: 15;
     margin: auto;
+    width: 100%;
     text-align: center;
 }
 
